# tecnm

./: .gitignore  .tmp_batch_driver.sh  .tmp_summary.py  AGENTS.md  CAMBIOS_REALIZADOS.md  CHANGES_OCR_RESILIENCE.md  CLAUDE.md  CODEX.md  COMPREHENSIVE_AUDIT_ALL_METHODS.md  CONTEXT.md  ML_AI_AUDIT.md  SESSION_SUMMARY_2026_04_26.md  SESSION_SUMMARY_2026_04_26_PHASE2.md  install-mac.sh  install-windows.ps1  output_rules.yaml  problem-catalog.md  pyproject.toml  run.md  test_error_classifier.py  test_ocr_resilience.py  test_pdf_validator.py  test_phase2_integration.py
.github/: copilot-instructions.md
docs/: 61-Formato Adecuación al Presupuesto de Ingresos Propios.xlsx  DOCKER_BUILD.md  ML_PHASE1_GETTING_STARTED.md  OCR_RESILIENCE.md  PHASE2.1_GETTING_STARTED.md  PHASE2.2_GETTING_STARTED.md  PROCESAMIENTO_COMPLETADO.txt  README.md  TEST_MANUAL.md  ingest-pdf-review.html  ingest-pdf.skill  run.md
examples/: ml_orchestrator_example.py  ocr_robust_example.py
output/: FAM_2025_ASIGNACIÓN.md  Manual_de_Procedimientos_del_Tecnológico_Nacional_de_México_2.md  REGLAMENTO_INT_DE_TRABAJO_DEL_PERSONAL_DOCENTE-1.md  test.md
pdf-markdown-codex/: SKILL.md  requirements-optional.txt  requirements.txt
pdf-to-markdown-pro/: .INICIO.txt  ACTUALIZACION_ESTRATEGIA.md  CONFIGURACION_ESTRATEGICA.txt  ESTRATEGIA_JERARQUICA.md  ESTRUCTURA.txt  INDICE.md  LICENSE  README.md  RESUMEN.txt  RESUMEN_FINAL.md  SKILL.md  SKILL_REVIEW.md  START.md  VERIFICACION.md  requirements.txt  test_output.md
pdf_extractor/: AGENT.md  README.md  __init__.py  __main__.py  cli.py  cloudbuild.yaml  (+1 more)
(+175 files in other folders)
