[project]
name = "pdf-extractor"
version = "3.0.0"
description = "A stateless PDF to Markdown extraction service"
authors = [{ name = "TecNM" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart",
    "click",
    "rich",
    "PyMuPDF",
    "pdfplumber",
    "pypdf",
    "pdfminer.six",
    "tabulate",
    "pytesseract",
    "pdf2image",
    "easyocr",
    "rapidocr-onnxruntime",
    "img2table",
    "Pillow",
    "opencv-python-headless",
    "langdetect",
    "chardet",
    "pyspellchecker",
    "tqdm",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["pdf_extractor/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "B", "I", "W", "UP", "RUF"]
ignore = ["E501"]